requirements: update text file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,20 @@
-opencv-python
-dlib==19.5.0
-scipy>=0.17.0
-scikit-image
+cycler==0.10.0
+decorator==4.2.1
+dlib==19.10.0
+http://download.pytorch.org/whl/torch-0.3.1-cp36-cp36m-macosx_10_7_x86_64.whl
+kiwisolver==1.0.1
+matplotlib==2.2.2
+networkx==2.1
+numpy==1.14.2
+opencv-python==3.4.0.12
+pillow==5.0.0
+pyparsing==2.2.0
+python-dateutil==2.7.0
+pytz==2018.3
+pywavelets==0.5.2
+pyyaml==3.12
+scikit-image==0.13.1
+scipy==1.0.0
+six==1.11.0
+torch==0.3.0.post4
+torchvision==0.2.0
